--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,16 @@
     <title>Gridsock Game</title>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <header>
+      <h1>Game Name</h1>
+    </header>
+    <main>
+      <section>
+        <label for="loginInput">Username:</label>
+        <input id="loginInput" type="text" />
+        <button>Login</button>
+      </section>
+    </main>
+    <script src="src/assets/main.ts"></script>
   </body>
 </html>
