feat: add game lobby section, also added username in header

--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,24 @@
   <body>
     <header>
       <h1>Game Name</h1>
+      <p>User Name</p>
     </header>
     <main>
       <section>
         <label for="loginInput">Username:</label>
         <input id="loginInput" type="text" />
         <button>Login</button>
+      </section>
+      <section>
+        <h2>Game Lobby</h2>
+        <ul>
+          <li>
+            <p>User</p>
+            <button>waiting</button>
+          </li>
+        </ul>
+        <div>0/5</div>
+        <button>Start Game</button>
       </section>
     </main>
     <script src="src/assets/main.ts"></script>
