--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,12 @@
       <p>User Name</p>
     </header>
     <main>
-      <section>
+      <section id="loginSection">
         <label for="loginInput">Username:</label>
         <input id="loginInput" type="text" />
-        <button>Login</button>
+        <button id="loginButton">Login</button>
       </section>
-      <section>
+      <section id="gameLobbySection">
         <h2>Game Lobby</h2>
         <ul>
           <li>
@@ -29,6 +29,6 @@
         <button>Start Game</button>
       </section>
     </main>
-    <script src="src/assets/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
