commiting before merging with main

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,6 @@
         <button>Start Game</button>
       </section>
     </main>
-    <!-- <script src="src/assets/main.ts"></script> -->
+    <script src="src/assets/main.ts"></script>
   </body>
 </html>
