changed queryselector to get element by id, refactored the code, wrote comments in english

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       </section>
       <section id="gameLobbySection">
         <h2>Game Lobby</h2>
-        <ul>
+        <ul id="gameLobbySectionUl">
           <li>
             <p>User</p>
             <button>waiting</button>
