added class hidden and implemented the logic to hide the login and show the lobby

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
         <input id="loginInput" type="text" />
         <button id="loginButton">Login</button>
       </section>
-      <section id="gameLobbySection">
+      <section id="gameLobbySection" class="hidden">
         <h2>Game Lobby</h2>
         <ul id="gameLobbySectionUl">
           <li>
