--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Game Name</h1>
-      <p>User Name</p>
+      <p id="usernameDisplay"></p>
     </header>
     <main>
       <section id="loginSection">
