feat: add id to players ready container

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
             <button>waiting</button>
           </li>
         </ul>
-        <div>0/5</div>
+        <div id="playersReady">0/5</div>
         <button>Start Game</button>
       </section>
     </main>
