feat: add id for the button, and class hidden for it aswell

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
         <div id="playersReady">0/5</div>
-        <button>Start Game</button>
+        <button id="startGameButton" class="hidden">Start Game</button>
       </section>
     </main>
     <script type="module" src="src/main.ts"></script>
