--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,10 @@
         <div id="playersReady">0/5</div>
         <button id="startGameButton" class="hidden">Start Game</button>
       </section>
+
+      <section id="gameSection"><canvas class="canvas" id="drawingCanvas"></canvas></section>
     </main>
+
     <script type="module" src="src/main.ts"></script>
   </body>
 </html>
