added class and id to canvas in html

--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
           </div>
           <div>
             <!--Drawing area-->
-            <canvas></canvas>
+            <canvas class="canvas" id="drawingCanvas"></canvas>
           </div>
           <div>
             <!--Chosen word to draw-->
