feat: placeholder for functionality, will remove button later

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
         <div id="playersReady">0/5</div>
         <button id="startGameButton" class="hidden">Start Game</button>
       </section>
+      <button id="click">click</button>
     </main>
     <script type="module" src="src/main.ts"></script>
   </body>
