feat: add id for game section and user container

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
         <button id="startGameButton" class="hidden">Start Game</button>
       </section>
       <button id="click">click</button>
-      <section>
+      <section id="gameSection">
         <!--Game section-->
         <aside>
           <!--Score container-->
@@ -46,7 +46,7 @@
           <div>
             <!--Current "drawer"-->
             <p>
-              Now drawing: <span>User <i></i></span>
+              Now drawing: <span id="user">User <i></i></span>
             </p>
           </div>
           <div>
