--- a/client/index.html
+++ b/client/index.html
@@ -32,30 +32,31 @@
         <div id="playersReady">0/5</div>
         <button id="startGameButton" class="hidden">Start Game</button>
       </section>
-      <section> <!--Game section-->
-        <aside> <!--Score container-->
+      <section id="gameSection"> <!--Game section-->
+        <aside id="scoreList"> <!--Score container-->
+          <p>Score:</p>
           <ul></ul>
         </aside>
         <article>
           <div> <!--Current "drawer"-->  
             <p>Now drawing: <span>User <i></i></span></p>
           </div>
-          <div> <!--Drawing area-->
+          <div id="frame"> <!--Drawing area-->
             <canvas></canvas>
           </div>
           <div> <!--Chosen word to draw-->
             <p>Your word to draw is: <span></span></p>
           </div>
         </article>
-        <aside> <!--Guessing container-->
+        <aside id="guessingContainer"> <!--Guessing container-->
           <div>
-            <p>Please, remember to spell the word correctly when guessing.</p>
+            <p id="guessInstruction">Please, remember to spell the word correctly when guessing.</p>
           </div>
-          <div>
-            <ul></ul> <!--Chat answers as viewed by user -->
+          <div id="gameChatContainer">
+            <ul id="chatList"></ul> <!--Chat answers as viewed by user -->
             <div> <!--Chat input-->
               <p>Chat:</p>
-              <input type="text">
+              <input id="gameChatInput" type="text">
               <button type="button" id="">Guess</button>
             </div>
           </div>
