feat: game chat btn

--- a/client/index.html
+++ b/client/index.html
@@ -55,8 +55,8 @@
             <ul></ul> <!--Chat answers as viewed by user -->
             <div> <!--Chat input-->
               <p>Chat:</p>
-              <input type="text">
-              <button type="button" id="">Guess</button>
+              <input type="text" id="guessInput">
+              <button type="button" id="guessButton">Guess</button>
             </div>
           </div>
         </aside>
