feat: guess chat

--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,7 @@
           <div id="gameChatContainer">
             <ul id="chatList"></ul> <!--Chat answers as viewed by user -->
             <div> <!--Chat input-->
-              <p>Chat:</p>
+              <p>Write your guess here:</p>
               <input type="text" id="guessInput">
               <button type="button" id="guessButton">Guess</button>
             </div>
