feat: add ul with id player highscore

--- a/client/index.html
+++ b/client/index.html
@@ -43,8 +43,7 @@
         <!--Game section-->
         <aside id="scoreList">
           <!--Score container-->
-          <p>Score:</p>
-          <ul></ul>
+          <ul id="playerHighscore"></ul>
         </aside>
         <article>
           <div>
