adding clear button functionality

--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
           <div id="frame">
             <!--Drawing area-->
             <canvas class="canvas" id="drawingCanvas"></canvas>
+            <button id="clearCanvasButton">Clear Canvas</button>
           </div>
           <div>
             <!--Chosen word to draw-->
