--- a/client/index.html
+++ b/client/index.html
@@ -24,8 +24,7 @@
         <input id="loginInput" type="text" />
         <button id="loginButton">Login</button>
       </section>
-      <!-- Test button to trigger countdown (temporary, remove in production) -->
-      <button id="testStartCountdownButton">Test Start Countdown</button>
+
       <section id="gameLobbySection" class="hidden">
         <h2>Game Lobby</h2>
         <ul id="gameLobbySectionUl">
@@ -37,9 +36,12 @@
         <div id="playersReady">0/5</div>
         <button id="startGameButton" class="hidden">Start Game</button>
       </section>
-      <button id="right">Guessed right answer</button>
-      <button id="click">click</button>
-      <section id="gameSection">
+
+      <section id="gameSection" class="hidden">
+        <!-- Test button to trigger countdown (temporary, remove in production) -->
+        <!-- <button id="testStartCountdownButton">Test Start Countdown</button>
+        <button id="right">Guessed right answer</button>
+        <button id="click">click</button> -->
         <!--Game section-->
         <aside id="scoreList">
           <!--Score container-->
