feat: check word correct

--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
           </div>
           <div>
             <!--Chosen word to draw-->
-            <p>Your word to draw is: <span></span></p>
+            <p>Your word to draw is: <span id="theWord">fisk</span></p>
           </div>
         </article>
         <aside id="guessingContainer">
