add id to count down value element to display countdown

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
       <div>
         <!-- Timer section-->
         <div>
-          <p>Time remaining: <span></span>&nbsp;s</p>
+          <p>Time remaining: <span id="countdownValue"></span></p>
         </div>
       </div>
     </header>
