Started HTML for end page

--- a/client/index.html
+++ b/client/index.html
@@ -167,6 +167,25 @@
           </aside>
         </div>
       </section>
+
+      <!--End page section-->
+      <section id="endSection" class="end-section ">
+        <div id="scoreBoard">
+          <h3>Player Scores:</h3>
+        </div>
+        <button id="backToLobbyBtn">Back To Lobby</button>
+        <div id="imageAndWordContainers">
+            <h3>From recent session:</h3>
+            <div id="imagesContainer">
+              <p>Image 1:</p>
+              <!-- Images will be populated from TS -->
+            </div>
+            <div id="wordsContainer">
+              <p>Word 1:</p>
+              <!-- Words will be populated from TS -->
+            </div>
+        </div>
+      </section>
     </main>
 
     <script type="module" src="src/main.ts"></script>
