--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
         </div>
 
         <div class="login-container">
+          WORKING?
           <label for="loginInput">Pick a nickname</label>
           <div class="input-panel">
             <input id="loginInput" class="login-input" type="text" placeholder="Michelangelo" />
@@ -166,6 +167,7 @@
             <ul id="playerHighscore" class="player-highscore"></ul>
           </aside>
         </div>
+        <p id="rightWordDisplay"></p>
       </section>
 
       <!--End page section-->
