style: header box-shadow, min-height sections, removed width main causing scrollbar

--- a/client/index.html
+++ b/client/index.html
@@ -204,7 +204,7 @@
 
       <!--End page section-->
       <section id="endSection" class="end-section hidden">
-        <div id="scoreBoard">
+        <div id="scoreBoard" class="score-board">
           <h3>Player Scores:</h3>
           <!--Player scores will be populated in the list below from TS. TS-Developer might remove the 5 x li's if he/she so chooses-->
           <ul>
