handle end of game message on client side

--- a/client/index.html
+++ b/client/index.html
@@ -202,6 +202,7 @@
           </aside>
         </div>
         <p id="rightWordDisplay"></p>
+        <p id="endOfGame"></p>
       </section>
 
       <!--End page section-->
