Feat/style: End screen, scores, star animation bug: css content outside of main-section.

--- a/client/index.html
+++ b/client/index.html
@@ -208,12 +208,11 @@
           <h3>Player Scores:</h3>
           <!--Player scores will be populated in the list below from TS. TS-Developer might remove the 5 x li's if he/she so chooses-->
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+            <li><span>1</span><span>Winner</span><span>500p</span></li>
+            <li><span>2</span><span>Dummy</span><span>400p</span></li>
+            <li><span>3</span><span>Dummy</span><span>300p</span></li>
+            <li><span>4</span><span>Dummy</span><span>200p</span></li>
+            <li><span>5</span><span>Dummy</span><span>100p</span></li>
         </div>
         <button id="backToLobbyBtn">Back To Lobby</button>
         <div id="imageAndWordContainers">
