feat: correct displays to all, player guessing correct can't guess again

--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
             <div class="icon-container">
               <img src="./assets/icons/word.svg" alt="word icon" width="30" height="30" />
             </div>
-            <span id="wordToDraw">Word</span>
+            <span id="wordToDraw"></span>
           </div>
           <div class="timer-panel">
             <!-- Timer section-->
