feat: add question mark icon

--- a/client/index.html
+++ b/client/index.html
@@ -66,8 +66,8 @@
             <ul id="lobbyChatList" class="lobby-chat-container"></ul>
             <div class="chat-input-panel">
               <input type="text" id="lobbyChatInput" placeholder="message" />
-              <button class="icon-container icon-hover">
-                <img src="./assets/icons/send.svg" id="lobbyChatButton" alt="send button" width="30" height="30" />
+              <button class="icon-container icon-hover" id="lobbyChatButton">
+                <img src="./assets/icons/send.svg" alt="send button" width="30" height="30" />
               </button>
             </div>
           </div>
@@ -89,11 +89,6 @@
             </ul>
           </div>
         </div>
-
-        <div class="test-buttons">
-          <button id="testStartCountdownButton">Countdown</button>
-          <button id="click">click</button>
-        </div>
       </section>
 
       <!--Game section-->
@@ -104,7 +99,7 @@
           <!--Current "drawer"-->
           <div class="user-panel">
             <div class="icon-container">
-              <img src="./assets/icons/user.svg" alt="user icon" width="30" height="30" />
+              <img src="./assets/icons/color.svg" alt="user icon" width="30" height="30" />
             </div>
 
             <span id="user">User <i></i></span>
