feat: change id to button from svg so it is accessible, added the question mark

--- a/client/index.html
+++ b/client/index.html
@@ -110,6 +110,7 @@
               <img src="./assets/icons/word.svg" alt="word icon" width="30" height="30" />
             </div>
             <span id="wordToDraw">Word</span>
+            <img src="./assets/icons/question.svg" class="hidden" alt="question mark" width="30" height="30" />
           </div>
           <div class="timer-panel">
             <!-- Timer section-->
