--- a/client/index.html
+++ b/client/index.html
@@ -249,19 +249,19 @@
             <li><span>4</span><span>Dummy</span><span>200p</span></li>
             <li><span>5</span><span>Dummy</span><span>100p</span></li>
           </ul>
-        </div> 
+        </div>
         <button id="backToLobbyBtn">Back To Lobby</button>
-        <div id="imageAndWordContainers">
+        <!-- <div id="imageAndWordContainers">
           <h3>From recent session:</h3>
           <div id="imagesContainer">
             <p>Image 1:</p>
-            <!--Images will be populated from TS-->
+            Images will be populated from TS
           </div>
           <div id="wordsContainer">
             <p>Word 1:</p>
-            <!--Words will be populated from TS-->
+            Words will be populated from TS
           </div>
-        </div>
+        </div> -->
       </section>
     </main>
 
