--- a/client/index.html
+++ b/client/index.html
@@ -110,7 +110,14 @@
               <img src="./assets/icons/word.svg" alt="word icon" width="30" height="30" />
             </div>
             <span id="wordToDraw"></span>
-            <img src="./assets/icons/question.svg" class="hidden" alt="question mark" width="30" height="30" />
+            <img
+              src="./assets/icons/question.svg"
+              id="question"
+              class="hidden"
+              alt="question mark"
+              width="30"
+              height="30"
+            />
           </div>
           <div class="timer-panel">
             <!-- Timer section-->
@@ -121,6 +128,8 @@
             <p id="countdownMessage"></p>
           </div>
         </div>
+
+        <div id="nextRoundTimer" class="next-round-timer hidden">3</div>
 
         <div class="main-section">
           <aside id="guessingContainer" class="guessing-container">
