--- a/client/index.html
+++ b/client/index.html
@@ -129,6 +129,7 @@
           </div>
         </div>
 
+        <div id="lightbox" class="lightbox hidden"></div>
         <div id="nextRoundTimer" class="next-round-timer hidden">3</div>
 
         <div class="main-section">
