--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO meta tags -->
+    <meta name="keywords" content="Pictionary, Online-Game, Draw-and-guess, Web-based-game, School-assignment">
+    <meta name="author" content="Andreas Lundin, Matthias Nilsson, Nell Andersson, Per Rosén, Regina Johansson Malmlöf">
+    <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+    <meta name="description" content="A school assignment from Medieinstitutet: Build a real time, online game through the use of Websocket.">
+    
+    <!-- Open Graph meta tags for social media -->
+    <meta property="og:title" content="SketchIt">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sea-turtle-app-p6dao.ondigitalocean.app/">
+    <meta property="og:description" content="A school assignment from Medieinstitutet: Build a real time, online game through the use of Websocket.">
+    <meta property="og:locale" content="en">
+
     <link rel="stylesheet" href="src/styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
